import java.time.LocalDateTime;

public class EBookLoan {
    private String loanId;
    private datetime startTime;
    private datetime endTime;
    private boolean isActive;

    private EBookLicense license;
}