public class OrderItem {
    private String orderItemId;
    private int quantity;
    private double subTotal;

    private MenuItem menuItem;
}