package studdict.core;

public class Order {
    private Boolean isFbDisabled = false;

    public double getOrderTotalforTable(String tableId) {
        return 0;
    }

    public void disableFoodAndBeverage() {
        this.isFbDisabled = true;
    }
}
