package studdict.core;

public class Payment {
    private boolean isCompleted;

    public void registerPayment() {
        this.isCompleted = true;
    }
}
