@startuml
skinparam style strictuml
skinparam monochrome true

class Student
class University
class Department
class Venue
class StudyTable
class Reservation
class PrivateReservation
class PublicReservation
class ReservationParticipant
class InviteCode
class CheckIn
class StudySubject
class Order
class OrderItem
class MenuItem
class Bill
class Payment
class EBook
class EBookLicense
class EBookLoan
class LoyaltyWallet
class PointsTransaction
class StaffMember

' Inheritance
Reservation <|-- PrivateReservation
Reservation <|-- PublicReservation

' Relationships
Student "*" -- "1" Department : belongs to >
Department "*" -- "1" University : belongs to >
Student "1" -- "1" LoyaltyWallet : owns >
LoyaltyWallet "1" -- "*" PointsTransaction : records >
Student "1" -- "*" ReservationParticipant : attends >
ReservationParticipant "*" -- "1" Reservation : refers to >
Reservation "1" -- "*" Order : contains >
Reservation "1" -- "1" Bill : produces >
Reservation "1" -- "0..1" InviteCode : associated with >
Reservation "1" -- "*" CheckIn : has >
CheckIn "1" -- "1" EBookLoan : enables >
EBookLoan "*" -- "1" EBookLicense : consumes >
EBookLicense "*" -- "1" EBook : belongs to >
Bill "1" -- "*" Payment : settled by >
StaffMember "1" -- "*" Payment : processes cash >
Order "1" -- "*" OrderItem : contains >
OrderItem "*" -- "1" MenuItem : refers to >
StudyTable "1" -- "*" Reservation : contains >
Venue "1" -- "*" StudyTable : contains >
PublicReservation "*" -- "1" StudySubject : associated with >

@enduml
